--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 body {
-  background: teal;
+  background: white;
 }
 p {
-  color: rebeccapurple;
+  color: black;
 }
 h1 {
   font-weight: bold;
-  color:rebeccapurple;
+  color:black;
 }
 h5 {
-  color:rebeccapurple;
+  color:black;
 }
 img{
   border-style:dashed;
