--- a/index.css
+++ b/index.css
@@ -18,13 +18,12 @@ h5 {
 .intro {
   width: 500px;
 }
-
-}
-.order{
+div.order{
   text-align:center;
   height: 116px;
   width:160px;
   float:left;
+  border-height:
   border-color:black;
   border-style: solid;
 }
