--- a/index.css
+++ b/index.css
@@ -40,7 +40,10 @@ h4{
   font-size: 20px;
   text-decoration: underline;
 }
-header{
+ul.header{
   list-style-type: none;
+}
+li.yeet{
+  display:inline;
   
 }
