--- a/index.css
+++ b/index.css
@@ -47,6 +47,6 @@ li.yeet{
   display:inline;
   padding:10px;
   margin:2px;
-  background-color: purple;
+  background-color: yellow;
   text-decoration: none;
 }
