--- a/index.css
+++ b/index.css
@@ -48,6 +48,8 @@ ul.header{
   border-color:black;
   padding:10px;
   margin:0;
+  margin-inline-start: 0px;
+  overflow: hidden;
 }
 li.yeet{
   display:inline;
@@ -55,5 +57,4 @@ li.yeet{
   border-style:solid;
   border-color: black;
   margin:0;
-  margin-inline-start: 0px;
 }
