--- a/index.css
+++ b/index.css
@@ -51,13 +51,13 @@ ul.header{
   margin-inline-start: 0px;
   overflow: hidden;
 }
-li a{
+li.{
   display:inline;
   padding: 10px;
   margin:0;
   color:black;
 }
-li a:hover{
+li.:hover{
   background-color: purple;
 }
 .current{
