--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ ul.header{
   text-decoration: none;
   padding:10px;
   margin:0;
+  color:black;
   margin-inline-start: 0px;
   overflow: hidden;
 }
