--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ ul.header{
   list-style-type: none;
   background-color: yellow;
   text-decoration: none;
-  padding:10px;
+  padding:0;
   margin:0;
   color:black;
   margin-inline-start: 0px;
@@ -50,7 +50,12 @@ li.yeet{
   display:inline;
   padding: 10px;
   margin:0;
-  color:black;
+  display: block;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  font-family: Impact;
+  
 }
 li.yeet:hover{
   background-color: purple;
